# rsi-versioner

./: .gitignore  LICENSE  README.md  RELEASING.md  Run-RSI-Versioner.cmd  Run-Verse-Switcher.cmd  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
packaging/: rsi-versioner.iss  verse-switcher.iss
scripts/: Install-or-Run.ps1  build_installer.ps1  build_portable.ps1
src/rsi_versioner/: __init__.py  __main__.py  config.py  core.py  gui.py  logging_config.py  undo_state.py
src/rsi_versioner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/verse_switcher/: __init__.py  __main__.py  config.py  core.py  gui.py  logging_config.py  undo_state.py
tests/: test_config.py  test_core.py  test_swap_button_label.py  test_undo_and_logging.py
