[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rsi-versioner"
dynamic = ["version"]
description = "GUI tool to swap Star Citizen LIVE/PTU folders under a safe path allowlist"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
rsi-versioner-gui = "rsi_versioner.gui:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
