[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "verse-switcher"
dynamic = ["version"]
description = "Switch builds without the headache. GUI tool to swap Star Citizen LIVE/PTU folders safely."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/hugsndnugs/rsi-versioner"
Repository = "https://github.com/hugsndnugs/rsi-versioner"
Issues = "https://github.com/hugsndnugs/rsi-versioner/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
build = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
verse-switcher-gui = "verse_switcher.gui:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "1.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
